@@ -1,0 +1,18 @@
+// GenericFile.cs created with MonoDevelop
+// User: alan at 14:09 15/09/2007
+//
+// To change standard headers go to Edit->Preferences->Coding->Standard Headers
+//
+
+using System;
+
+namespace libgphoto2sharp
+{
+	public class GenericFile : File
+	{
+		public GenericFile()
+		{
+			
+		}
+	}
+}
