@@ -31,6 +31,7 @@ LIBGPHOTO2_SHARP_CSFILES =					\
 	$(srcdir)/Camera.cs					\
 	$(srcdir)/File.cs					\
 	$(srcdir)/FileSystem.cs					\
+	$(srcdir)/Files/GenericFile.cs				\
 	$(srcdir)/Files/ImageFile.cs				\
 	$(srcdir)/Files/MusicFile.cs
 
